--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,17 @@
 }
 
 body { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: poppins;
     background-color: #353535;
 }
 
 .header { 
     background-color: #F5F5F5; 
+    display: grid;
+    place-items: center;
     width: 100vw;
     height: 86px;
     color: #353535;
@@ -21,9 +27,12 @@ body {
 .big_tag {
     width: 256px;
     height: 120px;
+    margin-top: 43px;
+    display: grid;
+    place-items: center;
     background-color: transparent;
     border-radius: 8px;
-    border: solid 1.5px #F5F5F5;
+    border: solid 2px #F5F5F5;
     color: #F5F5F5;
     font-size: 48px;
     font-weight: 700;
@@ -35,6 +44,58 @@ body {
 .big_tag::before {
     content: 'User';
     position: absolute;
+    font-size: 19px;
+    font-weight: 600;
+    background-color: #FF5252;
+    padding: 2px 8px;
+    border-radius: 8px;
+    left: 0;
+    transform: translateX(-50%);
     
-    
+}
+
+.big_tag::after {
+    content: 'Comp';
+    position: absolute;
+    font-size: 19px;
+    font-weight: 600;
+    background-color: #FF5252;
+    padding: 2px 8px;
+    border-radius: 8px;
+    right: 0;
+    transform: translateX(50%);
+}
+
+.first_para {
+    margin-top: 32px;
+    font-size: 40px;
+    font-weight: 700;
+    color: #F5F5F5;
+}
+
+.last_para {
+    margin-top: 46px;
+    font-size: 30px;
+    font-weight: 600;
+    color: #F5F5F5;
+}
+
+.btns_container {
+    width: 500px;
+    height: 120px;
+    margin-top: 36px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.btns_container > .btn_action {
+    height: 120px;
+    width: 120px;
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+    border: solid 2px #F5F5F5;
+    font-size: 66px;
+    cursor: pointer;
 }
